--- a/LaunchCountDown/LaunchCountDown.csproj
+++ b/LaunchCountDown/LaunchCountDown.csproj
@@ -49,6 +49,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AudioSet.cs" />
     <Compile Include="Extensions\PartExtensions.cs" />
     <Compile Include="Extensions\RectExtensions.cs" />
     <Compile Include="LaunchCountDown.cs">
